--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingActivity" />
+        <activity android:name=".AudioPlayerActivity" />
     </application>
 
 </manifest>
